--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ header {
     padding: 15px;
 }
 .header__logo{
-    border: #281612 3px solid;
+    border: #281612 1px solid;
     padding: 10px;
     margin: 10px;
 }
@@ -48,20 +48,21 @@ header {
 }
 
 
- /* .header_menuLinkInd{
-    display: flex;
-    width: 100px;
-}  */
 /* -----------------------------------Main general  */
 main { 
     background-color: #EBDCC9;
     font-family: 'Poppins', sans-serif;
     }
-/* posicion central del h1 */
+/* posicion central del h1 y h2*/
 div h1{
     display:flex ;
     justify-content: center;
-    padding: 30px;
+    padding: 2rem;
+}
+div h2{
+    display:flex ;
+    justify-content: center;
+    padding: 2rem;
 }
 #main_index_verde{ 
     background-color: #4D7445;
@@ -87,26 +88,79 @@ div h1{
 #main_clubkop_ben{
     background-color: #B03B2A;
 }
+
+/* main index animaciones flex */
+
+/* usado en index y clubkop */
+.main__flexCardEsclavo{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: center;
+    margin:3rem ;    
+}
+
+/* usado en index NUESTRO MENU*/
+.main__flexCardEsclavoNM{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: center;
+    margin: 4rem ;    
+}
+.main__flexCardEsclavoSal{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: center;
+}
+.main__flexCardEsclavoDul{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: center;
+}
+
 /* --------------------------tamaño imagenes */
+/* usado en index y clubkop */
 .imgRecomDia{
-    width: 50%;
-    height: 50%;
+    max-width: 70%;
+    height: 70%;
+    display: block;
+    margin: 0 auto;
+    border-radius: 15px;
+
 }
 .imgMenu{
-    width: 25%;
-    height: 25%;
+    width: 100%;
+    height: 40%;
+    display: block;
+    margin: 0 auto;
+    border-radius: 15px;
 }
 .imgBebida{
-    width: 35%;
-    height: 35%;
+    width: 50%;
+    height: 30%;
+    display: block;
+    margin: 0 auto;
+    border-radius: 15px;
 }
 .imgSalado{
-    width: 20%;
-    height: 20%; 
+    width: 100%;
+    height: 100%;
+    display: block;
+    margin: 0 auto;
+    border-radius: 15px; 
 }
 .imgDulces{
-    width: 20%;
-    height: 20%; 
+    width: 100%;
+    height: 100%; 
+    display: block;
+    margin: 0 auto;
+    border-radius: 15px;
 }
 .tamImgAuto{
     max-width: 100%;   
@@ -118,22 +172,97 @@ div h1{
 }
 
 /* ------------Cajas Maestra//Esclavo */
+/* usado en index y clubkop */
 .boxEsclavo{
-    margin: 30px;
+    margin: 1rem;
+    width: 30rem;
+    border: 1px solid #281612;
+    padding: 1rem;
+    border-radius: 15px;
+    text-align: center;
 }
+.boxEsclavoDos{
+    margin: 1rem;
+    width: 20rem;
+    height: 33rem;
+    border: 1px solid #281612;
+    padding: 1rem;
+    border-radius: 15px;
+    text-align: justify;
+}
+.salados__boxEsclavo{
+    display: flex;
+    margin: 1rem;
+    width: 35rem;
+    height: 10rem;
+    border: 1px solid #281612;
+    padding: 1rem;
+    border-radius: 15px;
+    text-align: justify;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+.salados__ParraFlex{
+    display: flex;
+    flex-direction: column;
+    width: 16rem;
+    gap: 0.5rem;
+}
+.dulces__boxEsclavo{
+    display: flex;
+    margin: 1rem;
+    width: 35rem;
+    height: 10rem;
+    border: 1px solid #281612;
+    padding: 1rem;
+    border-radius: 15px;
+    text-align: justify;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+.dulces__ParraFlex{
+    display: flex;
+    flex-direction: column;
+    width: 16rem;
+    gap: 0.5rem;
+}
+
 .boxMaster{
-    padding: 50px;
+    padding: 2.5rem;
+}
+.bebidas__BoxMaster{
+    padding: 2.5rem; 
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;   
+}
+.bebidas__BoxEsclavo{
+    margin: 1rem;
+    width: 25rem;
+    height: 30rem;
+    border: 1px solid #281612;
+    padding: 1rem;
+    border-radius: 15px;
+    text-align: justify;
+}
+
+/* .bebidas__LiEsclavo{
+    height: 200px;
+} */
+.tituloPag{
+    padding: 2.5rem;
 }
 
 /* tamaño estilo texto main listados */
 main div ul li {
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 main section ul li div {
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 main div p {
-    font-style: italic;
+    font-style: normal;
+
     /* texto de menu club ------------- */
 }
 main section div p {
