--- a/css/style.css
+++ b/css/style.css
@@ -58,11 +58,13 @@ div h1{
     display:flex ;
     justify-content: center;
     padding: 2rem;
+    font-weight: 700;
 }
 div h2{
     display:flex ;
     justify-content: center;
     padding: 2rem;
+    font-weight: 700;
 }
 #main_index_verde{ 
     background-color: #4D7445;
@@ -189,6 +191,7 @@ div h2{
     padding: 1rem;
     border-radius: 15px;
     text-align: justify;
+    box-sizing: unset;
 }
 .salados__boxEsclavo{
     display: flex;
@@ -347,12 +350,15 @@ footer div {
 /* ---------------------------tamaños de Texto */
 .tamGrande {
     font-size: 3rem;
+    font-weight: 700;
 }
 .tamMediano{
-    font-size: 2rem
+    font-size: 2rem;
+    font-weight: 700;
 }
 .tamChico{
-    font-size: 1rem
+    font-size: 1rem;
+    font-weight: 700;
 }
 
 
