--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,9 @@ a {
 }
 
 /* ---------------------barra de navegacion */
-header nav ul li a{
+/* .header_Txt_Color{
     color:#281612 ;
-}
+} */
 header nav ul li {
     margin: 1rem;
 }
@@ -63,9 +63,10 @@ div h1{
 div h2{
     display:flex ;
     justify-content: center;
-    padding: 2rem;
+    padding: 1.5rem;
     font-weight: 700;
 }
+
 #main_index_verde{ 
     background-color: #4D7445;
 }
@@ -204,12 +205,16 @@ div h2{
     text-align: justify;
     flex-wrap: wrap;
     gap: 1.5rem;
+    box-sizing: unset;
+    
 }
 .salados__ParraFlex{
     display: flex;
     flex-direction: column;
     width: 16rem;
     gap: 0.5rem;
+    color: #281612
+   
 }
 .dulces__boxEsclavo{
     display: flex;
@@ -222,12 +227,14 @@ div h2{
     text-align: justify;
     flex-wrap: wrap;
     gap: 1.5rem;
+    box-sizing: unset;
 }
 .dulces__ParraFlex{
     display: flex;
     flex-direction: column;
     width: 16rem;
     gap: 0.5rem;
+    color: #281612;
 }
 
 .boxMaster{
@@ -237,14 +244,15 @@ div h2{
     padding: 2.5rem; 
     display: flex;
     flex-wrap: wrap;
-    gap: 0.5rem;   
+    gap: 2rem;
+    justify-content: center;
 }
 .bebidas__BoxEsclavo{
-    margin: 1rem;
+    margin: 2rem;
     width: 25rem;
     height: 30rem;
     border: 1px solid #281612;
-    padding: 1rem;
+    padding: 1.5rem;
     border-radius: 15px;
     text-align: justify;
 }
@@ -347,7 +355,7 @@ footer div {
 
 
 
-/* ---------------------------tamaños de Texto */
+/* ---------------------------formato de Texto */
 .tamGrande {
     font-size: 3rem;
     font-weight: 700;
@@ -361,5 +369,15 @@ footer div {
     font-weight: 700;
 }
 
-
-
+div h3{
+    font-weight: 700;
+    font-size: 1.5rem;
+    /* color: #281612; */
+}
+.SD_Subtitulo{
+    font-weight: 700;
+    font-size: 1.3rem;
+    font-style: normal;
+    text-align: center;
+    color: #281612c2;
+}
