--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ div h1{
     justify-content: center;
     padding: 2rem;
     font-weight: 700;
+    margin-bottom: 0rem;
 }
 div h2{
     display:flex ;
@@ -183,6 +184,7 @@ div h2{
     padding: 1rem;
     border-radius: 15px;
     text-align: center;
+    color: #281612;
 }
 .boxEsclavoDos{
     margin: 1rem;
@@ -193,6 +195,7 @@ div h2{
     border-radius: 15px;
     text-align: justify;
     box-sizing: unset;
+    color: #281612;
 }
 .salados__boxEsclavo{
     display: flex;
@@ -213,7 +216,7 @@ div h2{
     flex-direction: column;
     width: 16rem;
     gap: 0.5rem;
-    color: #281612
+    color: #281612;
    
 }
 .dulces__boxEsclavo{
@@ -246,6 +249,7 @@ div h2{
     flex-wrap: wrap;
     gap: 2rem;
     justify-content: center;
+    color: #281612;
 }
 .bebidas__BoxEsclavo{
     margin: 2rem;
