--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     padding: 0;
 }
 
+
 /* General  */
 ul, ol, li {
     list-style: none;
@@ -19,7 +20,7 @@ header nav ul li {
     margin: 1rem;
 }
 
-header { 
+header {
     background-color: #EBDCC9;
     font-family:'Poppins', sans-serif;
     font-weight: 700;
@@ -44,12 +45,12 @@ header {
     flex-wrap: wrap;
     gap: 40px;
     justify-content: flex-end;
-    margin:1rem ;    
+    margin:1rem ;
 }
 
 
 /* -----------------------------------Main general  */
-main { 
+main {
     background-color: #EBDCC9;
     font-family: 'Poppins', sans-serif;
     }
@@ -68,25 +69,25 @@ div h2{
     font-weight: 700;
 }
 
-#main_index_verde{ 
+#main_index_verde{
     background-color: #4D7445;
 }
-#main_index_verde2{ 
+#main_index_verde2{
     background-color: #4D7445;
 }
-#main_bebidas_verde{ 
+#main_bebidas_verde{
     background-color: #4D7445;
 }
-#main_salados_verde{ 
+#main_salados_verde{
     background-color: #4D7445;
 }
-#main_dulces_verde{ 
+#main_dulces_verde{
     background-color: #4D7445;
 }
-#main_promo_verde{ 
+#main_promo_verde{
     background-color: #4D7445;
 }
-#main_index_menu { 
+#main_index_menu {
     background-color: #B03B2A;
 }
 #main_clubkop_ben{
@@ -102,7 +103,7 @@ div h2{
     flex-wrap: wrap;
     gap: 1rem;
     justify-content: center;
-    margin:3rem ;    
+    margin:3rem ;
 }
 
 /* usado en index NUESTRO MENU*/
@@ -111,7 +112,7 @@ div h2{
     flex-wrap: wrap;
     gap: 1rem;
     justify-content: center;
-    margin: 4rem ;    
+    margin: 4rem ;
 }
 .main__flexCardEsclavoSal{
     display: flex;
@@ -136,8 +137,8 @@ div h2{
     display: block;
     margin: 0 auto;
     border-radius: 15px;
-
 }
+
 .imgMenu{
     width: 100%;
     height: 40%;
@@ -157,17 +158,17 @@ div h2{
     height: 100%;
     display: block;
     margin: 0 auto;
-    border-radius: 15px; 
+    border-radius: 15px;
 }
 .imgDulces{
     width: 100%;
-    height: 100%; 
+    height: 100%;
     display: block;
     margin: 0 auto;
     border-radius: 15px;
 }
 .tamImgAuto{
-    max-width: 100%;   
+    max-width: 100%;
     width: auto;
     height: auto;
 }
@@ -189,7 +190,7 @@ div h2{
 .boxEsclavoDos{
     margin: 1rem;
     width: 20rem;
-    height: 33rem;
+    /* height: 33rem; */
     border: 1px solid #281612;
     padding: 1rem;
     border-radius: 15px;
@@ -209,7 +210,7 @@ div h2{
     flex-wrap: wrap;
     gap: 1.5rem;
     box-sizing: unset;
-    
+
 }
 .salados__ParraFlex{
     display: flex;
@@ -217,7 +218,7 @@ div h2{
     width: 16rem;
     gap: 0.5rem;
     color: #281612;
-   
+
 }
 .dulces__boxEsclavo{
     display: flex;
@@ -244,7 +245,7 @@ div h2{
     padding: 2.5rem;
 }
 .bebidas__BoxMaster{
-    padding: 2.5rem; 
+    padding: 2.5rem;
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
@@ -288,22 +289,56 @@ main section div p {
 /* tamaño club */
 .tamClubVerde{
     background-color: #4D7445;
-    padding: 50px; 
+    padding: 50px;
 }
 .posH2{
-    padding-left: 40px;
+    padding: 24px;
+}
+.clubkop__listCenter{
+    display: flex;
+    flex-direction: column;
+    width: 20rem;
+    height: 20rem;
+    justify-content: center;
+    align-items: center;
+    padding: 0rem;
+    gap: 0.5rem;
+}
+.clubkop__txtCenter{
+    text-align: center;
+}
+.clubkop__flex {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.clubkop__formCenter{
+    display: flex;
+    flex-direction: column;
+    width: 40rem;
+    height: 20rem;
+    justify-content: center;
+    align-items: center;
 }
 /*----------botones section club*/
 .boton{
     background-color: #B03B2A;
     border-radius: 5px; ;
     padding: 8px 14px;
-    margin-top: 100px;
-    width: 250px;  
+    margin-top: 0px;
+    width: 250px;
 }
+.clubkop__padNone{
+    padding-left: 0rem;
+}
+
 .txtBoton {
     text-align: center;
 }
+.txtBotonDeco {
+    text-decoration: none;
+}
+
 /* ingreso de txt */
 .intxt{
     background-color: #EBDCC9;
@@ -315,7 +350,7 @@ main section div p {
 
 
 /* ------------------------------Footer general*/
-footer{ 
+footer{
     background-color: #EBDCC9;
     font-family: 'Poppins', sans-serif;
     padding: 1rem;
@@ -327,11 +362,11 @@ footer ul li a  img{
 }
 
 .footer__stylerrss {
-    padding: 2.4rem 2rem 2rem 2rem;
+    padding: 2rem;
     display: flex;
     width: 25rem;
     height: 8rem;
-    justify-content: center;
+    justify-content: left;
 }
 .footer__flexImg{
     display: flex;
@@ -345,7 +380,7 @@ footer ul li a  img{
     display: flex;
     flex-direction: column;
     margin-bottom: 0rem;
-    padding: 1rem 1rem 1rem 3rem;
+    padding: 0.3rem;
     width: 25rem;
     height: 8rem;
     color: #281612;
@@ -364,7 +399,6 @@ footer ul li a  img{
     border-top: #281612 2px solid;
 }
 .footer__logo{
-    /* border: #281612 1px solid; */
     padding: 10px;
     margin: 2.4rem 0.625rem 0.625rem 0.625rem;
 }
@@ -423,4 +457,145 @@ div h3{
     font-style: normal;
     text-align: center;
     color: #281612c2;
+}
+
+@media (max-width:992px){
+    .tamGrande{
+        font-size: 2.5rem;
+        font-weight: 700;
+        text-align: center;
+    }
+    div h2{
+        display:flex ;
+        justify-content: center;
+        padding: 1rem;
+        font-weight: 700;
+    }
+    .header__menuNav{
+        display: flex;
+        flex-wrap: wrap;
+        align-items:center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .header__padNone{
+        padding-left: 0;
+    }
+    .boxEsclavoDos, .boxEsclavo{
+        margin: 1rem;
+        width: 20rem;
+        height: 30rem;
+        border: 1px solid #281612;
+        padding: 1rem;
+        border-radius: 15px;
+        text-align: justify;
+        box-sizing: unset;
+        color: #281612;
+    }
+    .imgMenu, .imgRecomDia{
+        width: 90%;
+        height: 40%;
+        display: block;
+        margin: 0 auto;
+        border-radius: 15px;
+        }
+    .main__flexCardEsclavoNM, .main__flexCardEsclavo{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1rem;
+        justify-content: center;
+        margin: 0rem ;
+        padding-left: 0rem;
+        }
+    .footer__master{
+        display: flex;
+        flex-direction: column;
+
+        align-items: center;
+        border-top: #281612 2px solid;
+
+        }
+    .footer__contacto{
+        text-align: center;
+        padding-left: 1rem;
+        }
+    footer div ul {
+        padding-left: 0rem;
+    }
+    .footer__logo{
+        padding: 10px;
+        margin: 0.625rem;
+    }
+    .footer__stylerrss {
+        padding: 2rem;
+        display: flex;
+        width: 25rem;
+        height: 8rem;
+        justify-content: center;
+    }
+    .salados__boxEsclavo{
+        display: flex;
+        margin: 1rem;
+        width: 18rem;
+        height: 21rem;
+        border: 1px solid #281612;
+        padding: 1rem;
+        border-radius: 15px;
+        text-align: justify;
+        flex-wrap: wrap;
+        gap: 1.5rem;
+        box-sizing: unset;
+        justify-content: center;
+    }
+    .salados__imgMob{
+        width: 50%;
+        height:50%;
+    }
+    .dulces__boxEsclavo{
+        display: flex;
+        margin: 1rem;
+        width: 18rem;
+        height: 21rem;
+        border: 1px solid #281612;
+        padding: 1rem;
+        border-radius: 15px;
+        text-align: justify;
+        flex-wrap: wrap;
+        gap: 1.5rem;
+        box-sizing: unset;
+        justify-content: center;
+    }
+    .clubkop__formCenter{
+        display: flex;
+        flex-direction: column;
+        width: 20rem;
+        height: 10rem;
+        justify-content: center;
+        align-items: center;
+    }
+    .clubkop__listCenter{
+        display: flex;
+        flex-direction: column;
+        width: 20rem;
+        height: 20rem;
+        justify-content: center;
+        align-items: center;
+        padding: 0rem;
+    }
+    .clubkop__txtCenter{
+        text-align: center;
+    }
+    .clubkop__flex {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .posH2{
+        padding: 1rem;
+    }
+    .boton{
+        padding: 8px 14px;
+        margin-top: 0px;
+        width: 250px;
+    }
 }
