--- a/css/style.css
+++ b/css/style.css
@@ -511,8 +511,8 @@ div h3{
     }
     .boxEsclavoDos, .boxEsclavo{
         margin: 1rem;
-        width: 20rem;
-        height: 30rem;
+        width: 17rem;
+        height: auto;
         border: 1px solid #281612;
         padding: 1rem;
         border-radius: 15px;
@@ -521,19 +521,21 @@ div h3{
         color: #281612;
     }
     .imgMenu, .imgRecomDia{
-        width: 90%;
-        height: 40%;
+        width: auto;
+        height: auto;
         display: block;
         margin: 0 auto;
         border-radius: 15px;
         }
     .main__flexCardEsclavoNM, .main__flexCardEsclavo{
         display: flex;
-        flex-wrap: wrap;
+        /* flex-wrap: wrap; */
+        flex-direction: column;
         gap: 1rem;
         justify-content: center;
         margin: 0rem ;
         padding-left: 0rem;
+        align-items: center;
         }
     .main__flexCardEsclavoSal, .main__flexCardEsclavoDul{
         padding: 0rem;
