--- a/css/style.css
+++ b/css/style.css
@@ -136,25 +136,20 @@ div h2{
 /* --------------------------tamaño imagenes */
 /* usado en index y clubkop */
 .imgRecomDia{
-    max-width: 70%;
-    height: 70%;
-    display: block;
-    margin: 0 auto;
-    border-radius: 15px;
-}
-
-.imgMenu{
-    width: 100%;
+    max-width: 100%;
     height: 40%;
     display: block;
     margin: 0 auto;
     border-radius: 15px;
 }
-.imgBebida{
-    width: 50%;
-    height: 30%;
+.imgMenu{
     display: block;
     margin: 0 auto;
+    border-radius: 15px;
+}
+.imgBebida{
+    display: block;
+    margin: 0.5rem auto;
     border-radius: 15px;
 }
 .imgSalado{
@@ -194,7 +189,6 @@ div h2{
 .boxEsclavoDos{
     margin: 1rem;
     width: 20rem;
-    /* height: 33rem; */
     border: 1px solid #281612;
     padding: 1rem;
     border-radius: 15px;
@@ -214,7 +208,6 @@ div h2{
     flex-wrap: wrap;
     gap: 1.5rem;
     box-sizing: unset;
-
 }
 .salados__ParraFlex{
     display: flex;
@@ -222,7 +215,6 @@ div h2{
     width: 16rem;
     gap: 0.5rem;
     color: #281612;
-
 }
 .dulces__boxEsclavo{
     display: flex;
@@ -257,18 +249,21 @@ div h2{
     color: #281612;
 }
 .bebidas__BoxEsclavo{
-    margin: 2rem;
-    width: 25rem;
-    height: 30rem;
+    display: flex;
+    flex-direction: column;
+    margin: 1rem;
+    width: 20rem;
+    height: auto;
     border: 1px solid #281612;
-    padding: 1.5rem;
+    padding: 1rem;
     border-radius: 15px;
     text-align: justify;
+    color: #281612;
 }
-
-/* .bebidas__LiEsclavo{
-    height: 200px;
-} */
+.bebidas__padMar{
+    padding: 1rem;
+    margin: 0rem;
+}
 .tituloPag{
     padding: 2.5rem;
 }
@@ -348,7 +343,6 @@ main section div p {
 .txtBotonDeco {
     text-decoration: none;
 }
-
 /* ingreso de txt */
 .intxt{
     background-color: #EBDCC9;
@@ -357,8 +351,6 @@ main section div p {
     border: inset;
     width: 300px;
 }
-
-
 /* ------------------------------Footer general*/
 footer{
     background-color: #EBDCC9;
@@ -374,7 +366,6 @@ footer ul li a  img{
     padding: 0rem 2rem 2rem 2rem;
     margin: 0rem;
 }
-
 .footer__stylerrss {
     padding: 2rem;
     display: flex;
@@ -429,7 +420,6 @@ footer ul li a  img{
 .colorCrema{
     color: #EBDCC9;
 }
-
 /* -----------------Colores de fondo */
 .colorFondoCafe{
     background-color: #281612;
@@ -443,9 +433,6 @@ footer ul li a  img{
 .colorFondoCrema{
     background-color: #EBDCC9;
 }
-
-
-
 /* ---------------------------formato de Texto */
 .tamGrande {
     font-size: 3rem;
@@ -459,7 +446,6 @@ footer ul li a  img{
     font-size: 1rem;
     font-weight: 700;
 }
-
 div h3{
     font-weight: 700;
     font-size: 1.5rem;
@@ -526,33 +512,30 @@ div h3{
         display: block;
         margin: 0 auto;
         border-radius: 15px;
-        }
+    }
     .main__flexCardEsclavoNM, .main__flexCardEsclavo{
         display: flex;
-        /* flex-wrap: wrap; */
         flex-direction: column;
         gap: 1rem;
         justify-content: center;
         margin: 0rem ;
         padding-left: 0rem;
         align-items: center;
-        }
+    }
     .main__flexCardEsclavoSal, .main__flexCardEsclavoDul{
         padding: 0rem;
     }
     .footer__master{
         display: flex;
         flex-direction: column;
-
         align-items: center;
         border-top: #281612 2px solid;
-
-        }
+    }
     .footer__contacto{
         text-align: center;
         padding: 0.2rem;
         height: auto;
-        }
+    }
     footer div ul {
         padding: 0rem;
         margin: 0rem;
@@ -638,6 +621,18 @@ div h3{
         padding: 1rem;
         margin: 0rem;
     }
+    .bebidas__BoxEsclavo{
+        display: flex;
+        flex-direction: column;
+        margin: 1rem;
+        width: 20rem;
+        height: auto;
+        border: 1px solid #281612;
+        padding: 1rem;
+        border-radius: 15px;
+        text-align: justify;
+        color: #281612;
+    }
     .clubkop_Subtitulo{
         font-weight: 500;
         font-size: 1.3rem;
@@ -647,7 +642,7 @@ div h3{
     }
     .SD_Subtitulo{
         font-weight: 500;
-        font-size: 1.3rem;
+        font-size: 1rem;
         font-style: normal;
         text-align: center;
         color: #281612c2;
