--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,7 @@ div h2{
     justify-content: center;
     color: #281612;
 }
+
 .bebidas__BoxEsclavo{
     display: flex;
     flex-direction: column;
@@ -648,3 +649,226 @@ div h3{
         color: #281612c2;
     }
 }
+@media (max-width:370px){
+    .tamGrande{
+        font-size: 2rem;
+        font-weight: 700;
+        text-align: center;
+    }
+    .tamMediano{
+        font-size: 1rem;
+        font-weight: 700;
+    }
+    .tamChico{
+        font-size: 0.25rem;
+        font-weight: 700;
+    }
+    div h2{
+        display:flex ;
+        justify-content: center;
+        padding: 1rem;
+        font-weight: 700;
+    }
+    .header__menuNav{
+        display: flex;
+        flex-wrap: wrap;
+        align-items:center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .header__padNone{
+        padding-left: 0;
+    }
+    /* falta */
+    .boxEsclavoDos, .boxEsclavo{
+        margin: 1rem;
+        width: 14rem;
+        height: auto;
+        border: 1px solid #281612;
+        padding: 1rem;
+        border-radius: 15px;
+        text-align: justify;
+        box-sizing: unset;
+        color: #281612;
+    }
+    .imgRecomDia{
+        width: auto;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+        border-radius: 15px;
+    }
+    .main__flexCardEsclavoNM, .main__flexCardEsclavo{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        justify-content: center;
+        margin: 0rem ;
+        padding-left: 0rem;
+        align-items: center;
+    }
+    .main__flexCardEsclavoSal, .main__flexCardEsclavoDul{
+        padding: 0rem;
+    }
+    .footer__master{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border-top: #281612 2px solid;
+    }
+    .footer__contacto{
+        text-align: center;
+        padding: 0.2rem;
+        height: auto;
+    }
+    footer div ul {
+        padding: 0rem;
+        margin: 0rem;
+    }
+    .footer__logo{
+        padding: 10px;
+        margin: 0.625rem;
+    }
+    .footer__stylerrss {
+        padding: 2rem;
+        display: flex;
+        width: 25rem;
+        height: 8rem;
+        justify-content: center;
+    }
+    .salados__boxEsclavo{
+        display: flex;
+        margin: 1rem;
+        width: 14rem; /* width: 17rem; */
+        height: 21rem;
+        border: 1px solid #281612;
+        padding: 1rem;
+        border-radius: 15px;
+        text-align: justify;
+        flex-wrap: wrap;
+        gap: 1.5rem;
+        box-sizing: unset;
+        justify-content: center;
+    }
+    .salados__imgMob{
+        width: 50%;
+        height:50%;
+    }
+    .dulces__boxEsclavo{
+        display: flex;
+        margin: 1rem;
+        width: 14rem;        /* width: 18rem; */
+        height: 21rem;
+        border: 1px solid #281612;
+        padding: 1rem;
+        border-radius: 15px;
+        text-align: justify;
+        flex-wrap: wrap;
+        gap: 1.5rem;
+        box-sizing: unset;
+        justify-content: center;
+    }
+    .clubkop__formCenter{
+        display: flex;
+        flex-direction: column;
+        width: auto;
+        height: auto;
+        justify-content: center;
+        align-items: center;
+    }
+    .clubkop__listCenter{
+        display: flex;
+        flex-direction: column;
+        width: 20rem;
+        height: 20rem;
+        justify-content: center;
+        align-items: center;
+        padding: 0rem;
+    }
+    .clubkop__txtCenter{
+        text-align: center;
+    }
+    .clubkop__flex {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: auto;
+    }
+    .posH2{
+        padding: 1rem;
+    }
+    .boton{
+        padding: 8px 14px;
+        margin-top: 0px;
+        width: 250px;
+    }
+    .bebidas__padNone{
+        padding: 1rem;
+        margin: 0rem;
+    }
+    .bebidas__BoxEsclavo{
+        display: flex;
+        flex-direction: column;
+        margin: 0rem;/* margin: 1rem; */
+        width: 14rem; /* width: 20rem; */
+        height: auto;
+        border: 1px solid #281612;
+        padding: 1rem;
+        border-radius: 15px;
+        text-align: justify;
+        color: #281612;
+    }
+    .clubkop_Subtitulo{
+        font-weight: 500;
+        font-size: 1rem;
+        font-style: normal;
+        text-align: center;
+        color:#EBDCC9 ;
+    }
+    .SD_Subtitulo{
+        font-weight: 500;
+        font-size: 1rem;
+        font-style: normal;
+        text-align: center;
+        color: #281612c2;
+    }
+    .tituloPag{
+        padding: 1.5rem;
+    }
+    .intxt{
+        background-color: #EBDCC9;
+        color: gray;
+        border-radius: 2px;
+        border: inset;
+        width: 200px;
+    }
+    /*----------botones section club*/
+    .boton{
+        background-color: #B03B2A;
+        border-radius: 5px; ;
+        padding: 8px 14px;
+        margin-top: 0px;
+        width: 180px;
+    }
+    .imgBebida{
+        display: block;
+        width: 100%;
+        margin: 0.5rem auto;
+        border-radius: 15px;
+    }
+    .bebidas__BoxMaster{
+        padding: 1rem;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1rem;
+        justify-content: center;
+        color: #281612;
+    }
+    .imgMenu{
+        display: block;
+        width: 100%;
+        margin: 0 auto;
+        border-radius: 15px;
+    }
+}
+
