--- a/scss/base/_mixin.scss
+++ b/scss/base/_mixin.scss
@@ -65,3 +65,13 @@
     gap: $g5;
     color: $c5;
 }
+@mixin aniBrd {
+    box-sizing: unset;
+    height: auto;
+    background: rgba( 235, 220, 201, 0.6 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 10px );
+    -webkit-backdrop-filter: blur( 10px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
