--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,7 @@
 @import '../scss/base/maps';
 @import '../scss/base/extend';
 @import '../scss/base/mixin';
+@import '../scss/base/animation';
 
 
 
