--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,206 @@ a {
   background-color: #EBDCC9;
 }
 
+@-webkit-keyframes rotate-hor-center {
+  0% {
+    -webkit-transform: rotateX(0);
+    transform: rotateX(0);
+  }
+  100% {
+    -webkit-transform: rotateX(-360deg);
+    transform: rotateX(-360deg);
+  }
+}
+@keyframes rotate-hor-center {
+  0% {
+    -webkit-transform: rotateX(0);
+    transform: rotateX(0);
+  }
+  100% {
+    -webkit-transform: rotateX(-360deg);
+    transform: rotateX(-360deg);
+  }
+}
+.rotate-hor-center:hover {
+  -webkit-animation: rotate-hor-center 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
+  animation: rotate-hor-center 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
+}
+
+/**
+ * ----------------------------------------
+ * animation shadow-drop-2-bottom
+ * ----------------------------------------
+ */
+@-webkit-keyframes shadow-drop-2-bottom {
+  0% {
+    -webkit-transform: translateZ(0) translateY(0);
+    transform: translateZ(0) translateY(0);
+    -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+  100% {
+    -webkit-transform: translateZ(50px) translateY(-12px);
+    transform: translateZ(50px) translateY(-12px);
+    -webkit-box-shadow: 0 12px 20px -12px rgba(0, 0, 0, 0.35);
+    box-shadow: 0 12px 20px -12px rgba(0, 0, 0, 0.35);
+  }
+}
+@keyframes shadow-drop-2-bottom {
+  0% {
+    -webkit-transform: translateZ(0) translateY(0);
+    transform: translateZ(0) translateY(0);
+    -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+  100% {
+    -webkit-transform: translateZ(50px) translateY(-12px);
+    transform: translateZ(50px) translateY(-12px);
+    -webkit-box-shadow: 0 12px 20px -12px rgba(0, 0, 0, 0.35);
+    box-shadow: 0 12px 20px -12px rgba(0, 0, 0, 0.35);
+  }
+}
+@-webkit-keyframes focus-in-contract-bck {
+  0% {
+    letter-spacing: 1em;
+    -webkit-transform: translateZ(300px);
+    transform: translateZ(300px);
+    -webkit-filter: blur(12px);
+    filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateZ(12px);
+    transform: translateZ(12px);
+    -webkit-filter: blur(0);
+    filter: blur(0);
+    opacity: 1;
+  }
+}
+@keyframes focus-in-contract-bck {
+  0% {
+    letter-spacing: 1em;
+    -webkit-transform: translateZ(300px);
+    transform: translateZ(300px);
+    -webkit-filter: blur(12px);
+    filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateZ(12px);
+    transform: translateZ(12px);
+    -webkit-filter: blur(0);
+    filter: blur(0);
+    opacity: 1;
+  }
+}
+.focus-in-contract-bck {
+  -webkit-animation: focus-in-contract-bck 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: focus-in-contract-bck 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+@-webkit-keyframes vibrate-1 {
+  0% {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
+  20% {
+    -webkit-transform: translate(-2px, 2px);
+    transform: translate(-2px, 2px);
+  }
+  40% {
+    -webkit-transform: translate(-2px, -2px);
+    transform: translate(-2px, -2px);
+  }
+  60% {
+    -webkit-transform: translate(2px, 2px);
+    transform: translate(2px, 2px);
+  }
+  80% {
+    -webkit-transform: translate(2px, -2px);
+    transform: translate(2px, -2px);
+  }
+  100% {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
+}
+@keyframes vibrate-1 {
+  0% {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
+  20% {
+    -webkit-transform: translate(-2px, 2px);
+    transform: translate(-2px, 2px);
+  }
+  40% {
+    -webkit-transform: translate(-2px, -2px);
+    transform: translate(-2px, -2px);
+  }
+  60% {
+    -webkit-transform: translate(2px, 2px);
+    transform: translate(2px, 2px);
+  }
+  80% {
+    -webkit-transform: translate(2px, -2px);
+    transform: translate(2px, -2px);
+  }
+  100% {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
+}
+.vibrate-1 {
+  -webkit-animation: vibrate-1 0.3s linear infinite both;
+  animation: vibrate-1 0.3s linear infinite both;
+}
+
+@-webkit-keyframes text-focus-in {
+  0% {
+    -webkit-filter: blur(12px);
+    filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0);
+    filter: blur(0);
+    opacity: 1;
+  }
+}
+@keyframes text-focus-in {
+  0% {
+    -webkit-filter: blur(12px);
+    filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0);
+    filter: blur(0);
+    opacity: 1;
+  }
+}
+.text-focus-in {
+  -webkit-animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
+  animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
+}
+
+.shadow-drop-2-bottom:hover {
+  -webkit-animation: shadow-drop-2-bottom 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: shadow-drop-2-bottom 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+.ani_bounce {
+  animation: bounce 2s 1 1s;
+}
+
+.ani_flipY:hover {
+  animation: flipInY 4s;
+}
+
+.ani_zin:hover {
+  animation: zoomIn 2s;
+}
+
 .header__menuLink {
   display: flex;
   flex-direction: row;
@@ -117,6 +317,10 @@ header nav ul li {
   .header__padNone {
     padding-left: 0;
   }
+}
+
+.und_line {
+  text-decoration: underline;
 }
 
 .tamGrande {
@@ -362,7 +566,7 @@ main section div p {
 .imgRecomDia {
   display: block;
   margin: 0 auto;
-  border-radius: 15px;
+  border-radius: 2rem;
   height: 40%;
   width: none;
   max-width: 100%;
@@ -424,11 +628,19 @@ main section div p {
 .boxEsclavo {
   margin: 1rem;
   border: 1px solid #281612;
-  padding: 1rem;
+  padding: 1.5rem;
   width: 30rem;
   border-radius: 15px;
   text-align: center;
   color: #281612;
+  box-sizing: unset;
+  height: auto;
+  background: rgba(235, 220, 201, 0.6);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 @media (max-width: 992px) {
   .boxEsclavo {
@@ -441,6 +653,12 @@ main section div p {
     color: #281612;
     box-sizing: unset;
     height: auto;
+    background: rgba(235, 220, 201, 0.6);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
   }
 }
 @media (max-width: 370px) {
@@ -454,17 +672,31 @@ main section div p {
     color: #281612;
     box-sizing: unset;
     height: auto;
+    background: rgba(235, 220, 201, 0.6);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
   }
 }
 
 .boxEsclavoDos {
   margin: 1rem;
   border: 1px solid #281612;
-  padding: 1rem;
+  padding: 1.5rem;
   width: 20rem;
   border-radius: 15px;
   text-align: justify;
   color: #281612;
+  box-sizing: unset;
+  height: auto;
+  background: rgba(235, 220, 201, 0.6);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
   box-sizing: unset;
 }
 @media (max-width: 992px) {
@@ -478,6 +710,14 @@ main section div p {
     color: #281612;
     box-sizing: unset;
     height: auto;
+    background: rgba(235, 220, 201, 0.6);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    box-sizing: unset;
+    height: auto;
   }
 }
 @media (max-width: 370px) {
@@ -489,6 +729,14 @@ main section div p {
     border-radius: 15px;
     text-align: justify;
     color: #281612;
+    box-sizing: unset;
+    height: auto;
+    background: rgba(235, 220, 201, 0.6);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
     box-sizing: unset;
     height: auto;
   }
@@ -652,6 +900,16 @@ div h3 {
   }
 }
 
+.salados__boxEsclavo {
+  box-sizing: unset;
+  height: auto;
+  background: rgba(235, 220, 201, 0.6);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
 @media (max-width: 992px) {
   .salados__boxEsclavo {
     margin: 1rem;
@@ -665,6 +923,15 @@ div h3 {
     flex-wrap: wrap;
     gap: 1.5rem;
     box-sizing: unset;
+    box-sizing: unset;
+    height: auto;
+    background: rgba(235, 220, 201, 0.6);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    height: 80%;
     justify-content: center;
   }
 }
@@ -681,6 +948,14 @@ div h3 {
     flex-wrap: wrap;
     gap: 1.5rem;
     box-sizing: unset;
+    box-sizing: unset;
+    height: auto;
+    background: rgba(235, 220, 201, 0.6);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
     justify-content: center;
   }
 }
@@ -713,6 +988,16 @@ div h3 {
   }
 }
 
+.dulces__boxEsclavo {
+  box-sizing: unset;
+  height: auto;
+  background: rgba(235, 220, 201, 0.6);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
 @media (max-width: 992px) {
   .dulces__boxEsclavo {
     margin: 1rem;
@@ -726,6 +1011,15 @@ div h3 {
     flex-wrap: wrap;
     gap: 1.5rem;
     box-sizing: unset;
+    box-sizing: unset;
+    height: auto;
+    background: rgba(235, 220, 201, 0.6);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    height: 80%;
     justify-content: center;
   }
 }
@@ -742,6 +1036,14 @@ div h3 {
     flex-wrap: wrap;
     gap: 1.5rem;
     box-sizing: unset;
+    box-sizing: unset;
+    height: auto;
+    background: rgba(235, 220, 201, 0.6);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
     justify-content: center;
   }
 }
@@ -754,7 +1056,14 @@ div h3 {
   display: block;
   margin: 0rem auto;
   border-radius: 15px;
-  width: 100%;
+  width: 90%;
+  height: 90%;
+  margin-top: 1rem;
+}
+@media (max-width: 370px) {
+  .imgBebida {
+    margin-top: 0.5rem;
+  }
 }
 
 .bebidas__BoxMaster {
@@ -765,6 +1074,7 @@ div h3 {
   justify-content: center;
   align-items: none;
   color: #281612;
+  padding: 30px;
 }
 @media (max-width: 370px) {
   .bebidas__BoxMaster {
@@ -781,6 +1091,14 @@ div h3 {
   border-radius: 15px;
   text-align: justify;
   color: #281612;
+  box-sizing: unset;
+  height: auto;
+  background: rgba(235, 220, 201, 0.6);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
   display: flex;
   flex-direction: column;
   height: auto;
@@ -794,6 +1112,14 @@ div h3 {
     border-radius: 15px;
     text-align: justify;
     color: #281612;
+    box-sizing: unset;
+    height: auto;
+    background: rgba(235, 220, 201, 0.6);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
   }
 }
 
