--- a/scss/componentes/_bebidas_main.scss
+++ b/scss/componentes/_bebidas_main.scss
@@ -4,11 +4,17 @@
 }
 .imgBebida{
     @include tam2 (block, 0rem auto, $bdr-rad);
-    width: 100%;
+    width: 90%;
+    height: 90%;
+    margin-top: 1rem;
+    @media (max-width: 370px){
+        margin-top: 0.5rem;
+    }
 }
 .bebidas__BoxMaster{
     @include position (flex, none, wrap, 2rem, center,none);
     color: $cCafe;
+    padding: 30px;
     @media (max-width: 370px){
         padding: 1rem;
         gap: 1rem;
@@ -16,11 +22,13 @@
 }
 .bebidas__BoxEsclavo{
     @include boxEsc (1rem, 1px solid $cCafe, 1rem, 20rem, $bdr-rad, justify, $cCafe);
+    @include aniBrd;
     display:flex;
     flex-direction: column;
     height: auto;
     @media (max-width: 370px){
-        @include boxEsc (0rem, 1px solid $cCafe, 1rem, 14rem, $bdr-rad, justify, $cCafe)
+        @include boxEsc (0rem, 1px solid $cCafe, 1rem, 14rem, $bdr-rad, justify, $cCafe);
+        @include aniBrd;
     }
 }
 .bebidas__padMar{
